--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,6 +37,11 @@
     href="https://fonts.googleapis.com/css2?family=Iceland:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@1,6..12,600&family=Work+Sans:wght@100&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
